--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 #calculator-body {
-    width: max-content;
+    width: 300px;
     display: flex;
     flex-direction: column;
     border: 3px solid black ;
@@ -9,12 +9,14 @@
 }
 
 #display {
-    width: 100%;
-    height: 31%;
+    min-height: 50px;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
-    font-size: 48px;
+    flex-wrap: wrap;
+    font-size: 40px;
     background-color: #eeeeee;
+    overflow-wrap: anywhere;
 }
 
 
